Reviews activities and introduces ActivityWatching

--- a/app/views/backend/activities/_form.html.haml
+++ b/app/views/backend/activities/_form.html.haml
@@ -3,7 +3,7 @@
   =f.referenced_association :parent
   =f.input :nomen
   =f.input :description
-  =f.input :analytical_center_type
+  =f.input :nature
   =f.input :closed
   =f.input :family
   =f.input :net_margin, :show => :product
