--- a/app/views/backend/activities/show.html.haml
+++ b/app/views/backend/activities/show.html.haml
@@ -7,6 +7,6 @@
       -l.attribute :name
       -l.attribute :parent
       -l.attribute :nomen
-      -l.attribute :analytical_center_type
+      -l.attribute :nature
       -l.attribute :closed
       -l.attribute :family
