--- a/app/views/backend/entity_categories/show.html.haml
+++ b/app/views/backend/entity_categories/show.html.haml
@@ -1,12 +1,14 @@
 =toolbar do |t|
   -t.edit @entity_category
 
-=attributes_list(@entity_category) do |l|
-  -l.attribute :name
-  -l.attribute :by_default
-  -l.attribute :description
+=beehive do |b|
+  -b.cell do
+    =attributes_list(@entity_category) do |l|
+      -l.attribute :name
+      -l.attribute :by_default
+      -l.attribute :description
 
-%h2=tc(:x_prices, :count=>@entity_category.active_prices.count)
-=toolbar do |t|
-  -t.link :new, :action=>:new, :controller=>:product_nature_prices, :mode=>:sales
-=list :prices
+  -b.cell tc(:x_prices, :count => @entity_category.active_prices.count) do
+    =toolbar do |t|
+      -t.link :new, :action => :new, :controller => :product_nature_prices, :mode => :sales
+    =list :prices
