Finishes first adaptation to the new price system

--- a/app/views/backend/deposits/_form.html.haml
+++ b/app/views/backend/deposits/_form.html.haml
@@ -5,4 +5,4 @@
   =f.input :description
 
 =field_set :incoming_payments do
-  =render :partial => "depositable_payments_form"
+  =render 'depositable_payments_form'
