--- a/app/views/backend/entities/show.html.haml
+++ b/app/views/backend/entities/show.html.haml
@@ -1,4 +1,4 @@
-=render :partial => "backend/entities/search"
+=render 'backend/entities/search'
 =toolbar do |t|
   -t.edit @entity
   -t.print_entity @entity
