--- a/app/views/backend/transports/_form.html.haml
+++ b/app/views/backend/transports/_form.html.haml
@@ -7,4 +7,4 @@
   =f.input :description, :field => :text
 
 %h2=Transport.human_attribute_name(:deliveries)
-#deliveries{"data-refresh"=>url_for(:controller=>:transports, :action=>:new, :transport_id=>@transport.id), "data-refresh-mode"=>"update"}=render :partial=>"deliveries_form"
+#deliveries{"data-refresh"=>url_for(:controller=>:transports, :action=>:new, :transport_id=>@transport.id), "data-refresh-mode"=>"update"}=render 'deliveries_form'
