--- a/app/views/backend/inventories/_form.html.haml
+++ b/app/views/backend/inventories/_form.html.haml
@@ -1,6 +1,6 @@
 =field_set do
   =f.referenced_association :responsible, :source => :employees
   =f.input :description
-  =render :partial => "items_form"
+  =render 'items_form'
 
 
