Finishes new price system but still need to review sale/purchase process

--- a/app/views/backend/entities/_form.html.haml
+++ b/app/views/backend/entities/_form.html.haml
@@ -21,11 +21,9 @@
   =f.input :picture
   -# =f.input :ean13
   =f.custom_fields
-  -#for datum in @custom_field_data
-    =custom_field datum.custom_field.name, {:datatype => datum.custom_field.nature.to_sym, :id => "custom_field_datum_#{datum.custom_field_id}_value", :name => "custom_field_datum[#{datum.custom_field_id}][value]", :value => datum.value, :size => datum.custom_field.length_max, :options => {:include_blank => (datum.custom_field.required ? nil : '')}, :choices => datum.custom_field.choices.collect{|x| [x.name , x.id]}  }
 
 =field_set(:client_informations) do
-  =f.referenced_association :category
+  =f.referenced_association :sale_price_listing
   =f.input :origin, :autocomplete => true
   =f.input :first_met_on
   =f.referenced_association :proposer
