--- a/app/views/backend/incoming_deliveries/_items_form.html.haml
+++ b/app/views/backend/incoming_deliveries/_items_form.html.haml
@@ -1,8 +1,8 @@
 %table.list
   %tr
     %th=IncomingDeliveryItem.human_attribute_name(:product)
-    %th=ProductNaturePrice.human_attribute_name(:pretax_amount)
-    %th=ProductNaturePrice.human_attribute_name(:amount)
+    %th=ProductPrice.human_attribute_name(:pretax_amount)
+    %th=ProductPrice.human_attribute_name(:amount)
     %th=tc(:total_quantity)
     %th=IncomingDeliveryItem.human_attribute_name(:unit)
     %th=tc(:quantity_rest)
