--- a/app/views/backend/purchase_items/_price_fields.html.haml
+++ b/app/views/backend/purchase_items/_price_fields.html.haml
@@ -1,18 +1,18 @@
 -price ||= f.object
-.nested-fields
+-#.nested-fields
   #category-field.control-group.selector.required
     %label.control-label.required{:for => 'price-category-input'}
       %abbr{:title => 'required'} *
-      =ProductNaturePrice.human_attribute_name('category')
+      =ProductPrice.human_attribute_name('listing')
     .controls
-      =selector(:price, :category, {:controller=>"entity_categories", :action=>:unroll}, {:object => price}, :id => 'price-category-input', :class => 'selector required') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :entity_categories, :action => :new}, 'data-new-item' => 'price-category-input', :class => 'btn btn-new')
+      =selector(:price, :listing, {:controller=>"backend/product_price_listing", :action=>:unroll}, {:object => price}, :id => 'price-category-input', :class => 'selector required') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :entity_categories, :action => :new}, 'data-new-item' => 'price-category-input', :class => 'btn btn-new')
       -for error in price.errors['category']
         %span.help-inline=error
   =f.input(:pretax_amount, :wrapper_html => {:id => 'pretax-amount-field'})
   #tax-field.control-group.selector.required
     %label.control-label.required{:for => 'price-tax-input'}
       %abbr{:title => 'required'} *
-      =ProductNaturePrice.human_attribute_name('tax')
+      =ProductPrice.human_attribute_name('tax')
     .controls
       =selector(:price, :tax, {:controller=>"taxes", :action=>:unroll}, {:object => price}, :id => 'price-tax-input', :class => 'selector required') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :taxes, :action => :new}, 'data-new-item' => 'price-tax-input', :class => 'btn btn-new')
       -for error in price.errors['tax']
