--- a/app/views/backend/activity_repartitions/_form.html.haml
+++ b/app/views/backend/activity_repartitions/_form.html.haml
@@ -7,7 +7,7 @@
 =field_set(:analytics) do
   =f.referenced_association :activity
   =f.referenced_association :product_nature
-  =f.input :repartition_percentage
+  =f.input :percentage
   =f.input :description
 
 
