try to fixes product_indicator but not enought.

--- a/app/views/backend/product_indicator_natures/_form.html.haml
+++ b/app/views/backend/product_indicator_natures/_form.html.haml
@@ -17,6 +17,4 @@
   =f.input :maximal_value
 
 =field_set(:choice_options) do
-  =f.nested_association :choices do
-    =f.input :name
-    =f.input :value
+  =f.nested_association :choices
