--- a/app/views/backend/product_indicator_natures/_choice_fields.html.haml
+++ b/app/views/backend/product_indicator_natures/_choice_fields.html.haml
@@ -1,6 +1,6 @@
 -# Generated automatically. Don't edit this file.
 -product_indicator_nature_choice ||= f.object
 .nested-fields
-  =link_to_remove_association('labels.remove_choice'.t, f, :class => 'nested-remove remove-choice')
+  =link_to_remove_association(:choices, f)
   =f.input(:name, :wrapper_html => {:id => 'name-field'})
   =f.input(:value, :wrapper_html => {:id => 'value-field'})
