--- a/app/views/backend/product_indicators/new.html.haml
+++ b/app/views/backend/product_indicators/new.html.haml
@@ -1,8 +1,8 @@
 -# Generated automatically. Remove this line to keep your changes.
-=backend_form_for([:backend, @product_indicator_nature_choice], (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
+=backend_form_for([:backend, @product_indicator], (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
   -if params[:redirect]
     =hidden_field_tag(:redirect, params[:redirect])
   .form-fields>=render(:partial => 'form', :locals => {:f => f})
   =form_actions do
     =submit_tag(tl(:create), 'data-disable-with' => tl(:please_wait))
-    =link_to(tl(:cancel), backend_product_indicator_nature_choices_url, (params[:dialog] ? {'data-close-dialog' => params[:dialog]} : {}))
+    =link_to(tl(:cancel), backend_product_indicators_url, (params[:dialog] ? {'data-close-dialog' => params[:dialog]} : {}))
