--- a/app/views/backend/animals/show.html.haml
+++ b/app/views/backend/animals/show.html.haml
@@ -48,6 +48,11 @@
         -l.attribute :father, :url => true
         -l.attribute :identification_number
         -l.attribute :description
+        
+    -b.cell(tl(:x_indicators, :count => @animal.indicator_data.count)) do
+      =toolbar do |t|
+        -t.link(:new, :controller => :product_indicator_data, :product_id => @animal.id)
+      =list(:indicator)
 
   -b.tabbox do
 
@@ -57,4 +62,5 @@
       =list(:place)
     -b.cell(:groups) do
       =list(:group)
+
 
