--- a/app/views/backend/animals/_form.html.haml
+++ b/app/views/backend/animals/_form.html.haml
@@ -6,10 +6,8 @@
   =f.input :work_number, :placeholder => '4 chiffres'
   =f.input :identification_number, :placeholder => 'FR + DEPT + 8 chiffres'
   =f.custom_fields
-  -#for datum in @custom_field_data
-    =custom_field datum.custom_field.name, {:datatype => datum.custom_field.nature.to_sym, :id => "custom_field_datum_#{datum.custom_field_id}_value", :name => "custom_field_datum[#{datum.custom_field_id}][value]", :value => datum.value, :size => datum.custom_field.length_max, :options => {:include_blank => (datum.custom_field.required ? nil : '')}, :choices => datum.custom_field.choices.collect{|x| [x.name , x.id]}  }
 
-=field_set(:movement) do # partie entrée sortie de l entité animal
+=field_set(:move) do # partie entrée sortie de l entité animal
   =f.input :born_at, as: :date
   =f.input :dead_at, as: :date, disabled: true, include_blank: true, default_value: :blank
   =f.input :external, inline_label: "Cas des pères non présents sur l'exploitation"
